-updated json file

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dermannimwald",
   "version": "1.0.0",
   "description": "",
+  "version": "14.15.1",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
