--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "dermannimwald",
   "version": "1.0.0",
   "description": "",
-  "version": "14.15.1",
+  "engines": {
+    "node": "14.x"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
