--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
-  "name": "dermannimwald",
+  "name": "dermannimwald2",
   "version": "1.0.0",
   "description": "",
-  "engines": {
-    "node": "14.x"
-  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
